Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92036

Visual ordering flips when QSGRenderNode is used with DepthAwareRendering

XMLWordPrintable

    • 57ee54fb4770b618b0bbd06b069682b5cd11fc9f (qt/tqtc-qtdeclarative/5.15)

      When we use QSGRenderNode with DepthAwareRendering,
      Item's visual ordering does not work as expected.

      You can simply reproduce this issue by running attached application.
      It's 100% reproducible.

      import QtQuick 2.12
      import QtQuick.Window 2.12
      import MyItem 1.0
      
      Window {
          id: root
          width: 1920
          height: 720
          visible: true
      
          MyItem {
              id: myItem
          }
      
          Text {
              font.pixelSize: 20
              color: "black"
              text: "Hello Text"
          }
      
          Rectangle {
              anchors.fill: parent
              color: "green"
          }
      }
      

      Above code is main.qml from the attached application.

      Expected result is we never see the text "Hello Text",
      but actual result is the text is on the green rectangle.

        1. Tester-1.zip
          8 kB
          Hyunkook Khang
        2. 0001-Reset-GL_DEPTH_TEST-when-use-DepthAwareRendering.patch
          2 kB
          Hyunkook Khang
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            hyunkook_khang Hyunkook Khang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes